--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -8,81 +8,29 @@
     @Html.AntiForgeryToken()
     <div class="content-wrap">
         <main id="content" class="content" role="main">
-            <ol class="breadcrumb">
-                <li>Cadastro</li>
-            </ol>
-            <h1 class="page-title"><span class="fw-semi-bold">Tabelas de Preço</span></h1>
+            <h1 class="page-title">Cadastro - <span class="fw-semi-bold">Tabelas de Preço</span></h1>
             <div class="row">
                 <div class="col-md-8">
                     <section class="widget">
                         <header>
+                            <legend><strong>Dados</strong> Tabela</legend>
                             <div class="widget-controls">
                                 <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
                                 <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
-                                <a data-widgster="close" title="Close" href="#"><i class="glyphicon glyphicon-remove"></i></a>
+                                <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
                             </div>
                         </header>
                         <div class="widget-body">
-                            <form id="validation-form" class="form-horizontal form-label-left" method="post"
-                                    data-parsley-priority-enabled="false"
-                                    novalidate="novalidate">
+                            <form role="form">
                                 <fieldset>
                                     <div class="row">
-                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        <div class="col-sm-8">
                                             <div class="form-group">
-                                                <div class="col-sm-12">
-                                                    @Html.LabelFor(model => model.Descricao, new { @class = "col-sm-2 control-label" })
-                                                    @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "col-sm-12 form-control", placeholder = "Digite a Descrição Aqui" } })
-                                                    @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+                                                @Html.LabelFor(model => model.Descricao)
+                                                <div class="input-group col-sm-8">
+                                                    @Html.EditorFor(Model => Model.Descricao, new { @class = "form-control"})
                                                 </div>
                                             </div>
-                                        <div class="form-group">
-                                            <div class="col-sm-4">
-                                                @Html.LabelFor(model => model.TipoFipe)
-                                                @Html.Partial("_TipoFIPE", new VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel(@Model.TipoFipe))
-                                                @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="col-sm-2">
-                                                @Html.LabelFor(model => model.PlanoId)
-                                                @Html.EditorFor(model => model.PlanoId, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.PlanoId, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div class="col-sm-5">
-                                                @Html.LabelFor(model => model.ValorDe)
-                                                @Html.EditorFor(model => model.ValorDe, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ValorDe, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div class="col-sm-5">
-                                                @Html.LabelFor(model => model.ValorAte)
-                                                @Html.EditorFor(model => model.ValorAte, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ValorAte, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="col-sm-3">
-                                                @Html.LabelFor(model => model.ValorMensal)
-                                                @Html.EditorFor(model => model.ValorMensal, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ValorMensal, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div class="col-sm-5">
-                                                @Html.LabelFor(model => model.ValorParticipacaoEvento)
-                                                @Html.EditorFor(model => model.ValorParticipacaoEvento, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ValorParticipacaoEvento, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div class="col-sm-4">
-                                                @Html.LabelFor(model => model.ValorAdesao)
-                                                @Html.EditorFor(model => model.ValorAdesao, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ValorAdesao, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <br />
-                                    </div>
-                                    <div class="col-sm-offset-6">
-                                        <div class="btn-toolbar">
-                                            <button id="btnAdicionar" type="submit" class="btn btn-primary pull-right">Adicionar</button>
-                                            <button id="btnCancelar" type="button" class="btn btn-inverse pull-right">Cancelar</button>
                                         </div>
                                     </div>
                                 </fieldset>
@@ -93,11 +41,12 @@
             </div>
         </main>
     </div>
+
 }
 
-<div class="loader-wrap hiding hide">
-    <i class="fa fa-circle-o-notch fa-spin-fast"></i>
-</div>
+        <div class="loader-wrap hiding hide">
+            <i class="fa fa-circle-o-notch fa-spin-fast"></i>
+        </div>
 
-@Scripts.Render("~/app")
-@Scripts.Render("~/cadastro")
+        @Scripts.Render("~/app")
+        @Scripts.Render("~/cadastro")
